opagatekeeper-policy/playground/assets/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPlayground
metadata:
  name: playground
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: [""]
#Change as needed
