opagatekeeper-policy/playground/assets/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8splayground
  annotations:
    description: Have fun with your OPA policies.
spec:
  crd:
    spec:
      names:
        kind: K8sPlayground
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
        # Add your parameters
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8splayground

        violation[{"msg": msg, "details": {}}] {
         # Your Rego policy
         msg := sprintf("Your message")
        }
